--- a/.eslintrc
+++ b/.eslintrc
@@ -17,7 +17,7 @@
     "camelcase": 0,
     "import/extensions": 0,
     "@typescript-eslint/no-redeclare": 0,
-    "prettier/prettier": "error"
+    "prettier/prettier": 0
   },
   "settings": {
     "import/parsers": {
