--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "express-validator": "^6.14.3",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
+    "mongodb": "^6.5.0",
     "mongoose": "^7.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "passport": "^0.7.0",
     "randomstring": "^1.2.3",
-    "sharp": "^0.31.3"
+    "sharp": "^0.33.3"
   },
   "devDependencies": {
     "@types/apidoc": "^0.50.0",
@@ -58,7 +60,7 @@
     "expect": "^29.4.1",
     "gts": "^3.1.1",
     "jest": "^29.3.1",
-    "nodemon": "^2.0.20",
+    "nodemon": "^3.1.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
